--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "This project calculates stats and abilities for wildshaped 5e characters",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "test": "mocha"
+    "start": "react-scripts start",
+    "test": "mocha",
+    "build": "react-scripts build",
+    "deploy": "aws s3 sync --profile wildshape.me build/ s3://www.wildshape.me",
+    "eject": "react-scripts eject"
   },
   "engines": {
     "node": "8.0.0"
@@ -15,11 +18,23 @@
   "dependencies": {
     "async": "^2.6.1",
     "debug": "^2.2.0",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.11",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
+    "react-scripts": "2.1.8",
     "request": "^2.88.0"
   },
   "devDependencies": {
     "bdd-lazy-var": "^2.1.2",
     "mocha": "^4.0.1"
-  }
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
