--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "async": "^2.6.1",
     "debug": "^2.2.0",
     "lodash": "^4.17.11",
+    "materialize-css": "^1.0.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-materialize": "^2.6.0",
     "react-scripts": "2.1.8",
     "request": "^2.88.0"
   },
