--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-dom": "^16.8.4",
     "react-materialize": "^2.6.0",
     "react-scripts": "2.1.8",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "styled-components": "^4.1.3"
   },
   "devDependencies": {
     "bdd-lazy-var": "^2.1.2",
