implement custom router, and barebones pages for decks and not found page

--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-materialize": "^2.6.0",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "request": "^2.88.0",
     "styled-components": "^4.1.3"
