--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "react-select": "^2.4.2",
     "request": "^2.88.0",
     "styled-components": "^4.1.3"
   },
