--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,md}\"",
-    "prepare": "husky"
+    "prepare": "husky",
+    "download:beasts": "tsx src/utils/datasource/downloadBeasts.ts"
   },
   "dependencies": {
     "expo": "~54.0.31",
@@ -39,6 +40,7 @@
     "lint-staged": "^16.2.7",
     "prettier": "^3.8.1",
     "ts-jest": "^29.4.6",
+    "tsx": "^4.7.0",
     "typescript": "~5.9.2"
   },
   "lint-staged": {
