--- a/src/data/beasts_2014.json
+++ b/src/data/beasts_2014.json
@@ -58,7 +58,8 @@
         "damage": "1d6+3",
         "damageType": "Bludgeoning"
       }
-    ]
+    ],
+    "bodyType": "primate"
   },
   {
     "name": "Axe Beak",
@@ -94,7 +95,8 @@
         "damage": "1d8+2",
         "damageType": "Slashing"
       }
-    ]
+    ],
+    "bodyType": "bird"
   },
   {
     "name": "Baboon",
@@ -136,7 +138,8 @@
         "damage": "1d4-1",
         "damageType": "Piercing"
       }
-    ]
+    ],
+    "bodyType": "primate"
   },
   {
     "name": "Badger",
@@ -180,7 +183,8 @@
         "damage": "1",
         "damageType": "Piercing"
       }
-    ]
+    ],
+    "bodyType": "quadruped"
   },
   {
     "name": "Bat",
@@ -228,7 +232,8 @@
         "damage": "1",
         "damageType": "Piercing"
       }
-    ]
+    ],
+    "bodyType": "bird"
   },
   {
     "name": "Black Bear",
@@ -285,7 +290,8 @@
         "damage": "2d4+2",
         "damageType": "Slashing"
       }
-    ]
+    ],
+    "bodyType": "quadruped"
   },
   {
     "name": "Blood Hawk",
@@ -336,7 +342,8 @@
         "damage": "1d4+2",
         "damageType": "Piercing"
       }
-    ]
+    ],
+    "bodyType": "bird"
   },
   {
     "name": "Boar",
@@ -381,7 +388,8 @@
         "damage": "1d6+1",
         "damageType": "Slashing"
       }
-    ]
+    ],
+    "bodyType": "quadruped"
   },
   {
     "name": "Brown Bear",
@@ -443,7 +451,8 @@
         "damage": "2d6+4",
         "damageType": "Slashing"
       }
-    ]
+    ],
+    "bodyType": "quadruped"
   },
   {
     "name": "Camel",
@@ -479,7 +488,8 @@
         "damage": "1d4",
         "damageType": "Bludgeoning"
       }
-    ]
+    ],
+    "bodyType": "quadruped"
   },
   {
     "name": "Cat",
@@ -530,7 +540,8 @@
         "damage": "1",
         "damageType": "Slashing"
       }
-    ]
+    ],
+    "bodyType": "quadruped"
   },
   {
     "name": "Constrictor Snake",
@@ -579,7 +590,8 @@
         "damage": "1d8+2",
         "damageType": "Bludgeoning"
       }
-    ]
+    ],
+    "bodyType": "snake"
   },
   {
     "name": "Crab",
@@ -628,7 +640,8 @@
         "damage": "1",
         "damageType": "Bludgeoning"
       }
-    ]
+    ],
+    "bodyType": "insect"
   },
   {
     "name": "Crocodile",
@@ -675,7 +688,8 @@
         "damage": "1d10+2",
         "damageType": "Bludgeoning"
       }
-    ]
+    ],
+    "bodyType": "lizard"
   },
   {
     "name": "Deer",
@@ -711,7 +725,8 @@
         "damage": "1d4",
         "damageType": "Piercing"
       }
-    ]
+    ],
+    "bodyType": "quadruped"
   },
   {
     "name": "Dire Wolf",
@@ -765,7 +780,8 @@
         "damage": "2d6+3",
         "damageType": "Piercing"
       }
-    ]
+    ],
+    "bodyType": "quadruped"
   },
   {
     "name": "Draft Horse",
@@ -801,7 +817,8 @@
         "damage": "2d4+4",
         "damageType": "Bludgeoning"
       }
-    ]
+    ],
+    "bodyType": "quadruped"
   },
   {
     "name": "Eagle",
@@ -848,7 +865,8 @@
         "damage": "1d4+2",
         "damageType": "Bludgeoning"
       }
-    ]
+    ],
+    "bodyType": "bird"
   },
   {
     "name": "Elephant",
@@ -899,7 +917,8 @@
         "damage": "3d10+6",
         "damageType": "Bludgeoning"
       }
-    ]
+    ],
+    "bodyType": "quadruped"
   },
   {
     "name": "Elk",
@@ -950,7 +969,8 @@
         "damage": "2d4+3",
         "damageType": "Bludgeoning"
       }
-    ]
+    ],
+    "bodyType": "quadruped"
   },
   {
     "name": "Flying Snake",
@@ -995,7 +1015,8 @@
         "damage": "1",
         "damageType": "Bludgeoning"
       }
-    ]
+    ],
+    "bodyType": "snake"
   },
   {
     "name": "Frog",
@@ -1041,7 +1062,8 @@
         "description": "The frog's long jump is up to 10 ft. and its high jump is up to 5 ft., with or without a running start."
       }
     ],
-    "actions": []
+    "actions": [],
+    "bodyType": "lizard"
   },
   {
     "name": "Giant Ape",
@@ -1102,7 +1124,8 @@
         "damage": "7d6+6",
         "damageType": "Bludgeoning"
       }
-    ]
+    ],
+    "bodyType": "primate"
   },
   {
     "name": "Giant Badger",
@@ -1161,7 +1184,8 @@
         "damage": "2d4+1",
         "damageType": "Slashing"
       }
-    ]
+    ],
+    "bodyType": "quadruped"
   },
   {
     "name": "Giant Bat",
@@ -1209,7 +1233,8 @@
         "damage": "1d6+2",
         "damageType": "Piercing"
       }
-    ]
+    ],
+    "bodyType": "bird"
   },
   {
     "name": "Giant Boar",
@@ -1254,7 +1279,8 @@
         "damage": "2d6+3",
         "damageType": "Slashing"
       }
-    ]
+    ],
+    "bodyType": "quadruped"
   },
   {
     "name": "Giant Centipede",
@@ -1293,7 +1319,8 @@
         "damage": "1d4+2",
         "damageType": "Piercing"
       }
-    ]
+    ],
+    "bodyType": "insect"
   },
   {
     "name": "Giant Constrictor Snake",
@@ -1347,7 +1374,8 @@
         "damage": "2d8+4",
         "damageType": "Bludgeoning"
       }
-    ]
+    ],
+    "bodyType": "snake"
   },
   {
     "name": "Giant Crab",
@@ -1396,7 +1424,8 @@
         "damage": "1d6+1",
         "damageType": "Bludgeoning"
       }
-    ]
+    ],
+    "bodyType": "insect"
   },
   {
     "name": "Giant Crocodile",
@@ -1458,7 +1487,8 @@
         "damage": "2d8+5",
         "damageType": "Bludgeoning"
       }
-    ]
+    ],
+    "bodyType": "lizard"
   },
   {
     "name": "Giant Eagle",
@@ -1523,7 +1553,8 @@
         "damage": "2d6+3",
         "damageType": "Slashing"
       }
-    ]
+    ],
+    "bodyType": "bird"
   },
   {
     "name": "Giant Elk",
@@ -1584,7 +1615,8 @@
         "damage": "4d8+4",
         "damageType": "Bludgeoning"
       }
-    ]
+    ],
+    "bodyType": "quadruped"
   },
   {
     "name": "Giant Fire Beetle",
@@ -1627,7 +1659,8 @@
         "damage": "1d6-1",
         "damageType": "Slashing"
       }
-    ]
+    ],
+    "bodyType": "insect"
   },
   {
     "name": "Giant Frog",
@@ -1689,7 +1722,8 @@
         "actionType": "Action",
         "description": "The frog makes one bite attack against a Small or smaller target it is grappling. If the attack hits, the target is swallowed, and the grapple ends. The swallowed target is blinded and restrained, it has total cover against attacks and other effects outside the frog, and it takes 5 (2d4) acid damage at the start of each of the frog's turns. The frog can have only one target swallowed at a time. If the frog dies, a swallowed creature is no longer restrained by it and can escape from the corpse using 5 ft. of movement, exiting prone."
       }
-    ]
+    ],
+    "bodyType": "lizard"
   },
   {
     "name": "Giant Goat",
@@ -1734,7 +1768,8 @@
         "damage": "2d4+3",
         "damageType": "Bludgeoning"
       }
-    ]
+    ],
+    "bodyType": "quadruped"
   },
   {
     "name": "Giant Hyena",
@@ -1780,7 +1815,8 @@
         "damage": "2d6+3",
         "damageType": "Piercing"
       }
-    ]
+    ],
+    "bodyType": "quadruped"
   },
   {
     "name": "Giant Lizard",
@@ -1819,7 +1855,8 @@
         "damage": "1d8+2",
         "damageType": "Piercing"
       }
-    ]
+    ],
+    "bodyType": "lizard"
   },
   {
     "name": "Giant Octopus",
@@ -1885,7 +1922,8 @@
         "actionType": "Action",
         "description": "A 20-foot-radius cloud of ink extends all around the octopus if it is underwater. The area is heavily obscured for 1 minute, although a significant current can disperse the ink. After releasing the ink, the octopus can use the Dash action as a bonus action."
       }
-    ]
+    ],
+    "bodyType": "octopus"
   },
   {
     "name": "Giant Owl",
@@ -1947,7 +1985,8 @@
         "damage": "2d6+1",
         "damageType": "Slashing"
       }
-    ]
+    ],
+    "bodyType": "bird"
   },
   {
     "name": "Giant Poisonous Snake",
@@ -1991,7 +2030,8 @@
         "damage": "1d4+4",
         "damageType": "Piercing"
       }
-    ]
+    ],
+    "bodyType": "snake"
   },
   {
     "name": "Giant Rat",
@@ -2038,7 +2078,8 @@
         "damage": "1d4+2",
         "damageType": "Piercing"
       }
-    ]
+    ],
+    "bodyType": "quadruped"
   },
   {
     "name": "Giant Rat (Diseased)",
@@ -2085,7 +2126,8 @@
         "damage": "1d4+2",
         "damageType": "Piercing"
       }
-    ]
+    ],
+    "bodyType": "quadruped"
   },
   {
     "name": "Giant Scorpion",
@@ -2138,7 +2180,8 @@
         "damage": "1d10+2",
         "damageType": "Piercing"
       }
-    ]
+    ],
+    "bodyType": "insect"
   },
   {
     "name": "Giant Sea Horse",
@@ -2184,7 +2227,8 @@
         "damage": "1d6+1",
         "damageType": "Bludgeoning"
       }
-    ]
+    ],
+    "bodyType": "fish"
   },
   {
     "name": "Giant Shark",
@@ -2237,7 +2281,8 @@
         "damage": "3d10+6",
         "damageType": "Piercing"
       }
-    ]
+    ],
+    "bodyType": "fish"
   },
   {
     "name": "Giant Spider",
@@ -2303,7 +2348,8 @@
         "toHitBonus": 5,
         "range": "30/60"
       }
-    ]
+    ],
+    "bodyType": "insect"
   },
   {
     "name": "Giant Toad",
@@ -2356,7 +2402,8 @@
         "actionType": "Action",
         "description": "The toad makes one bite attack against a Medium or smaller target it is grappling. If the attack hits, the target is swallowed, and the grapple ends. The swallowed target is blinded and restrained, it has total cover against attacks and other effects outside the toad, and it takes 10 (3d6) acid damage at the start of each of the toad's turns. The toad can have only one target swallowed at a time.\nIf the toad dies, a swallowed creature is no longer restrained by it and can escape from the corpse using 5 feet of movement, exiting prone."
       }
-    ]
+    ],
+    "bodyType": "lizard"
   },
   {
     "name": "Giant Vulture",
@@ -2422,7 +2469,8 @@
         "damage": "2d6+2",
         "damageType": "Slashing"
       }
-    ]
+    ],
+    "bodyType": "bird"
   },
   {
     "name": "Giant Wasp",
@@ -2460,7 +2508,8 @@
         "damage": "1d6+2",
         "damageType": "Piercing"
       }
-    ]
+    ],
+    "bodyType": "insect"
   },
   {
     "name": "Giant Weasel",
@@ -2512,7 +2561,8 @@
         "damage": "1d4+3",
         "damageType": "Piercing"
       }
-    ]
+    ],
+    "bodyType": "quadruped"
   },
   {
     "name": "Giant Wolf Spider",
@@ -2574,7 +2624,8 @@
         "damage": "1d6+1",
         "damageType": "Piercing"
       }
-    ]
+    ],
+    "bodyType": "insect"
   },
   {
     "name": "Goat",
@@ -2619,7 +2670,8 @@
         "damage": "1d4+1",
         "damageType": "Bludgeoning"
       }
-    ]
+    ],
+    "bodyType": "quadruped"
   },
   {
     "name": "Hawk",
@@ -2666,7 +2718,8 @@
         "damage": "1",
         "damageType": "Slashing"
       }
-    ]
+    ],
+    "bodyType": "bird"
   },
   {
     "name": "Hunter Shark",
@@ -2719,7 +2772,8 @@
         "damage": "2d8+4",
         "damageType": "Bludgeoning"
       }
-    ]
+    ],
+    "bodyType": "fish"
   },
   {
     "name": "Hyena",
@@ -2765,7 +2819,8 @@
         "damage": "1d6",
         "damageType": "Piercing"
       }
-    ]
+    ],
+    "bodyType": "quadruped"
   },
   {
     "name": "Jackal",
@@ -2815,7 +2870,8 @@
         "damage": "1d4-1",
         "damageType": "Piercing"
       }
-    ]
+    ],
+    "bodyType": "quadruped"
   },
   {
     "name": "Killer Whale",
@@ -2872,7 +2928,8 @@
         "damage": "5d6+4",
         "damageType": "Piercing"
       }
-    ]
+    ],
+    "bodyType": "fish"
   },
   {
     "name": "Lion",
@@ -2944,7 +3001,8 @@
         "damage": "1d6+3",
         "damageType": "Slashing"
       }
-    ]
+    ],
+    "bodyType": "quadruped"
   },
   {
     "name": "Lizard",
@@ -2983,7 +3041,8 @@
         "damage": "1",
         "damageType": "Piercing"
       }
-    ]
+    ],
+    "bodyType": "lizard"
   },
   {
     "name": "Mammoth",
@@ -3034,7 +3093,8 @@
         "damage": "4d10+7",
         "damageType": "Bludgeoning"
       }
-    ]
+    ],
+    "bodyType": "quadruped"
   },
   {
     "name": "Mastiff",
@@ -3080,7 +3140,8 @@
         "damage": "1d6+1",
         "damageType": "Piercing"
       }
-    ]
+    ],
+    "bodyType": "quadruped"
   },
   {
     "name": "Mule",
@@ -3125,7 +3186,8 @@
         "damage": "1d4+2",
         "damageType": "Bludgeoning"
       }
-    ]
+    ],
+    "bodyType": "quadruped"
   },
   {
     "name": "Octopus",
@@ -3192,7 +3254,8 @@
         "description": "A 5-foot-radius cloud of ink extends all around the octopus if it is underwater. The area is heavily obscured for 1 minute, although a significant current can disperse the ink. After releasing the ink, the octopus can use the Dash action as a bonus action.",
         "toHitBonus": 0
       }
-    ]
+    ],
+    "bodyType": "octopus"
   },
   {
     "name": "Owl",
@@ -3249,7 +3312,8 @@
         "damage": "1",
         "damageType": "Slashing"
       }
-    ]
+    ],
+    "bodyType": "bird"
   },
   {
     "name": "Panther",
@@ -3314,7 +3378,8 @@
         "damage": "1d4+2",
         "damageType": "Slashing"
       }
-    ]
+    ],
+    "bodyType": "quadruped"
   },
   {
     "name": "Plesiosaurus",
@@ -3365,7 +3430,8 @@
         "damage": "3d6+4",
         "damageType": "Bludgeoning"
       }
-    ]
+    ],
+    "bodyType": "lizard"
   },
   {
     "name": "Poisonous Snake",
@@ -3404,7 +3470,8 @@
         "damage": "1",
         "damageType": "Piercing"
       }
-    ]
+    ],
+    "bodyType": "snake"
   },
   {
     "name": "Polar Bear",
@@ -3466,7 +3533,8 @@
         "damage": "2d6+5",
         "damageType": "Slashing"
       }
-    ]
+    ],
+    "bodyType": "quadruped"
   },
   {
     "name": "Pony",
@@ -3502,7 +3570,8 @@
         "damage": "2d4+2",
         "damageType": "Bludgeoning"
       }
-    ]
+    ],
+    "bodyType": "quadruped"
   },
   {
     "name": "Quipper",
@@ -3550,7 +3619,8 @@
         "damage": "1",
         "damageType": "Piercing"
       }
-    ]
+    ],
+    "bodyType": "fish"
   },
   {
     "name": "Rat",
@@ -3593,7 +3663,8 @@
         "damage": "1",
         "damageType": "Piercing"
       }
-    ]
+    ],
+    "bodyType": "quadruped"
   },
   {
     "name": "Raven",
@@ -3640,7 +3711,8 @@
         "damage": "1",
         "damageType": "Piercing"
       }
-    ]
+    ],
+    "bodyType": "bird"
   },
   {
     "name": "Reef Shark",
@@ -3693,7 +3765,8 @@
         "damage": "1d8+2",
         "damageType": "Piercing"
       }
-    ]
+    ],
+    "bodyType": "fish"
   },
   {
     "name": "Rhinoceros",
@@ -3734,7 +3807,8 @@
         "damage": "2d8+5",
         "damageType": "Bludgeoning"
       }
-    ]
+    ],
+    "bodyType": "quadruped"
   },
   {
     "name": "Riding Horse",
@@ -3770,7 +3844,8 @@
         "damage": "2d4+3",
         "damageType": "Bludgeoning"
       }
-    ]
+    ],
+    "bodyType": "quadruped"
   },
   {
     "name": "Saber-Toothed Tiger",
@@ -3834,7 +3909,8 @@
         "damage": "2d6+5",
         "damageType": "Slashing"
       }
-    ]
+    ],
+    "bodyType": "quadruped"
   },
   {
     "name": "Scorpion",
@@ -3872,7 +3948,8 @@
         "damage": "1",
         "damageType": "Bludgeoning"
       }
-    ]
+    ],
+    "bodyType": "insect"
   },
   {
     "name": "Sea Horse",
@@ -3903,7 +3980,8 @@
         "description": "The sea horse can breathe only underwater."
       }
     ],
-    "actions": []
+    "actions": [],
+    "bodyType": "fish"
   },
   {
     "name": "Spider",
@@ -3960,7 +4038,8 @@
         "damage": "1",
         "damageType": "Piercing"
       }
-    ]
+    ],
+    "bodyType": "insect"
   },
   {
     "name": "Stirge",
@@ -3999,7 +4078,8 @@
         "damage": "1d4+3",
         "damageType": "Piercing"
       }
-    ]
+    ],
+    "bodyType": "bird"
   },
   {
     "name": "Tiger",
@@ -4065,7 +4145,8 @@
         "damage": "1d8+3",
         "damageType": "Slashing"
       }
-    ]
+    ],
+    "bodyType": "quadruped"
   },
   {
     "name": "Triceratops",
@@ -4116,7 +4197,8 @@
         "damage": "3d10+6",
         "damageType": "Bludgeoning"
       }
-    ]
+    ],
+    "bodyType": "lizard"
   },
   {
     "name": "Tyrannosaurus Rex",
@@ -4172,7 +4254,8 @@
         "damage": "3d8+7",
         "damageType": "Bludgeoning"
       }
-    ]
+    ],
+    "bodyType": "lizard"
   },
   {
     "name": "Vulture",
@@ -4223,7 +4306,8 @@
         "damage": "1d4",
         "damageType": "Piercing"
       }
-    ]
+    ],
+    "bodyType": "bird"
   },
   {
     "name": "Warhorse",
@@ -4264,7 +4348,8 @@
         "damage": "2d6+4",
         "damageType": "Bludgeoning"
       }
-    ]
+    ],
+    "bodyType": "quadruped"
   },
   {
     "name": "Weasel",
@@ -4314,7 +4399,8 @@
         "damage": "1",
         "damageType": "Piercing"
       }
-    ]
+    ],
+    "bodyType": "quadruped"
   },
   {
     "name": "Wolf",
@@ -4368,6 +4454,7 @@
         "damage": "2d4+2",
         "damageType": "Piercing"
       }
-    ]
+    ],
+    "bodyType": "quadruped"
   }
 ]
