--- a/package.json
+++ b/package.json
@@ -18,10 +18,16 @@
     "download:beasts": "tsx src/utils/datasource/downloadBeasts.ts"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "expo": "~54.0.31",
     "expo-status-bar": "~3.0.9",
+    "nativewind": "^4.2.1",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-web": "^0.21.0",
+    "tailwindcss": "^3.4.19",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
@@ -29,6 +35,7 @@
     "@types/react": "~19.1.0",
     "@typescript-eslint/eslint-plugin": "^8.55.0",
     "@typescript-eslint/parser": "^8.55.0",
+    "babel-plugin-transform-import-meta": "^2.3.3",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.5",
